--- a/assets/package.json
+++ b/assets/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "phoenix_live_view": "file:../deps/phoenix_live_view"
+    "phoenix_live_view": "file:../deps/phoenix_live_view",
+    "trix": "^2.0.8",
+    "alpinejs": "^3.14.3"
   },
   "devDependencies": {
     "tailwind-scrollbar": "^3.0.4",
